# duckdb_orc

./: .gitignore  Cargo.toml  Makefile  README.md  description.yml
.github/workflows/: MainDistributionPipeline.yml  ci.yml
scripts/: metadata.py
src/: lib.rs
test/sql/: basic.test  read_orc.test  rusty_echo.test  test.orc
tests/: integration_test.rs
