[package]
name = "duckdb_orc"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for reading Apache ORC files"

[features]
default = []
extension = ["duckdb/loadable-extension"]

[lib]
name = "orc"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
name = "duckdb_orc"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "~1.10504.0", features = ["vtab-arrow", "bundled"] }
orc-rust = "0.8"
arrow = "58"
glob = "0.3"
